--- a/templates/support_ticket_admin_edit.html
+++ b/templates/support_ticket_admin_edit.html
@@ -4,6 +4,12 @@
 {% endblock %}
 
 {% block content %}
+	<div class="jumbotron">
+		<div class="container">
+			<h1>Support Ticket</h1>
+		</div>
+	</div>
+
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
